# cpp

./: .gitignore  01_sorting.cpp  02_sorting_vector_of_pairs_string_int.cpp  03_median.cpp  05_accumulate_advanced.cpp  07_relevance_ranking.cpp  08_container-specific_algorithms.cpp  09_find_in_set.cpp  11_classes.cpp  11_classes_for_Yandex_grader.cpp  11_classes_my_version.cpp  22_is_leap_year.cpp  README.md  bookmark.txt  structs.cpp  temp.cpp
01_white_belt_cpp/: my_print.h
DEV-C220/: 01_enums.cpp  02_auto_beginning.cpp  03_sum_elements_of_any_container_and_array.cpp  04_1_structured_bindings.cpp  04_2_structured_bindings.cpp  04_3_structured_bindings.cpp  05_print_all_non_zero_elm_in_collection.cpp  06_1_initializer_list.cpp  06_2_initializer_list.cpp  07_1_template_variables.cpp  08_uniform_initialization.cpp  09_auto_and_initializer_list.cpp  10_1_class_template_argument_deduction.cpp  10_2_class_template_argument_deduction.cpp  11_1_user_defined_deduction_guides.cpp  11_2_user_defined_deduction_guides.cpp  12_1_decltype.cpp  12_2_decltype.cpp  12_3_decltype.cpp  12_4_decltype.cpp  13_1_decltype_and_auto.cpp  13_2_declval.cpp  13_3_declval.cpp  13_4_declval.cpp  13_decltype_and_auto.cpp  14_iterators_begin_and_end.cpp  15_summing_arrays_and_vectors.cpp  16_print_reverse_using_copy_algorithm.cpp  17_find_first_char_offset_in_string.cpp  18_1_lambda_anatomy.cpp  18_2_named_variable_of_type_lambda.cpp  18_3_default_return_type_for_lambda.cpp  18_4_explicit_return_type_for_lambda.cpp  18_5_accessing_member_vars_of_functor.cpp  18_lambda_introduction_for_each.cpp  19_lambda_introduction_copy_just_negative_values.cpp  20_copy_elements_within_given_range.cpp  21_lambda_passed_parameter_types.cpp  22_lambda_passing_parameters_by_reference.cpp  23_lambda_in_method_of_a_class.cpp  (+52 more)
belts_cpp/02_yellow_belt/final_yellow_belt_CLION/: CMakeLists.txt  input_redirection.cpp  token.cpp
belts_cpp/04_brown_belt/01_week/13_task_restructuring_code/: CMakeLists.txt  main.cpp  stats_aggregator.h  stats_aggregator_test.cpp
belts_cpp/04_brown_belt/02_week/04_task_refactoring_third_party_source_code/: CMakeLists.txt  json.cpp  json.h  profile.h
belts_cpp/04_brown_belt/02_week/06_from_final_yellow_belt/: CMakeLists.txt  database.cpp  date.cpp  token.h
belts_cpp/04_brown_belt/02_week/14_task_ConcurrentMap_2/: CMakeLists.txt  test_runner.h
belts_cpp/04_brown_belt/02_week/15_task_polynomial_Yandex_version/: CMakeLists.txt
belts_cpp/04_brown_belt/03_week/13_task_synchronized_2_with_constness/: CMakeLists.txt
belts_cpp/04_brown_belt/03_week/16_05_object_pool_fixed_properly_via_smart_ptr/: CMakeLists.txt  object_pool.cpp
belts_cpp/04_brown_belt/03_week/20_task_zoo/: CMakeLists.txt  animals.h  zoo.cpp
belts_cpp/04_brown_belt/03_week/22_01_task_expression_tree/: CMakeLists.txt  expression_tree.cpp
belts_cpp/04_brown_belt/03_week/22_02_task_expression_tree_Yandex_solution/: CMakeLists.txt  Common.h  expression_tree.cpp
belts_cpp/04_brown_belt/03_week/24_01_textures/: CMakeLists.txt  Common.h  Solution.cpp
belts_cpp/04_brown_belt/04_week/01_01_file_handing_in_C_style/: CMakeLists.txt
belts_cpp/04_brown_belt/05_week/01_demographic_stats/: CMakeLists.txt  demographic_stats.cpp
belts_cpp/04_brown_belt/05_week/03_express_trains/: CMakeLists.txt  express_trains.cpp
belts_cpp/04_brown_belt/05_week/04_demographic_stats_tests/: CMakeLists.txt  demographic_stats_tests.cpp
coursera_algorithms_on_strings/01_week/03_Trie_Matching_Extended/: CMakeLists.txt  trie_matching_extended.cpp
coursera_algorithms_on_strings/02_week/02_reconstruct_string_from_its_burrows_wheeler_transform/: CMakeLists.txt  reconstruct_string_from_its_bwt.cpp
cpp_concurrency/01_thread_management/00_launching_threads/: CMakeLists.txt  launching_threads.cpp
cpp_concurrency/01_thread_management/03_RAII_for_proper_join_or_detach/: CMakeLists.txt  RAII_for_proper_join_or_detach.cpp
cpp_concurrency/01_thread_management/04_passing_parameters_to_thread/: CMakeLists.txt  passing_parameters_to_thread.cpp
cpp_concurrency/01_thread_management/05_allowed_threads_provided_by_hardware/: CMakeLists.txt  hardware_concurrency.cpp
experiments/: tasks.json
experiments/05_virtual_destructors/: CMakeLists.txt  main.cpp
experiments/06_02_serialization/: CMakeLists.txt  serialization.cpp
experiments/09_nexign/: CMakeLists.txt
multithreading/12_03_Synchronized_from_scratch/: CMakeLists.txt
network_apps/: netw_notes.txt  wrappers.cpp  wrappers.h
network_apps/02_server/: CMakeLists.txt  server.cpp
network_apps/03_client_server/03_server/: 03_server.cpp  CMakeLists.txt
network_apps/03_client_server/client/: 03_client.cpp  CMakeLists.txt  client.cpp
sprint_01/: 12_class_methods.cpp  13_lambdas_for_lexicographical_compare_using_TEMPLATES.cpp  14_comparator_for_sorting_integers.cpp  16_count_dogs_in_shelter.cpp  18_consider_minus_words.cpp  18_consider_minus_words_Yandex_version.cpp  20.tf-idf_ranging.cpp
sprint_02/: 01_average_rating.cpp  01_average_rating_improved.cpp  02_cpp_integer_types.cpp  02_printing_vector_from_Mth_to_Nth_element.cpp  03_enums.cpp  03_enums_Yandex_version.cpp  04_enums_default_values_passed_to_function.cpp  05_comparisons.cpp  08_return_multiple_values_from_function.cpp  09_improved_relevance_comparison.cpp  10_task_tracker.cpp  11_template_functions.cpp  11_template_functions_challenge.cpp  12_templates_under_the_hood.cpp  13_stream_insertion_operator_overloading.cpp  14_functional_objects_Yandex_version.cpp  16_search_engine_with_doc_filter.cpp  18_sprint2_final_challenge.cpp  learning_cpp.code-workspace  temp.cpp
sprint_03/: 02_first_unit_test.cpp  04_bus_route_storage_system.cpp  05_CORRECT_unit_testing_of_search_system.cpp  05_temp.cpp  05_unit_testing_of_search_system.cpp  07_improving_testing_framework_using_macros.cpp  11_working_with_cerr_implementation.cpp  (+2 more)
sprint_04/: 00_default_contructor.cpp  (+12 more)
test_task_AME/: CMakeLists.txt  README.md  README.txt  main.cpp  paginator.h  profile.h  sorting_algorithms.h  test_runner.h  tests.cpp  tests.h  utilities.cpp  utilities.h
(+1968 files in other folders)
